--- a/UserInterface/MainWindow.xaml
+++ b/UserInterface/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UserInterface"
         mc:Ignorable="d"
-        Title="SCADA SISTEM" Height="628" Width="1522"  WindowState="Maximized" Background="LightGray" >
+        Title="SCADA SISTEM" Height="890" Width="1522"  WindowState="Maximized" Background="LightGray" >
     <Window.Resources>
         <Style TargetType="TabItem">
             <Setter Property="Template">
@@ -203,11 +203,11 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <Grid>
+    <Grid Background="#FF474747">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="751*"/>
-            <ColumnDefinition Width="643*"/>
-            <ColumnDefinition Width="120*"/>
+            <ColumnDefinition Width="357*"/>
+            <ColumnDefinition Width="390*"/>
+            <ColumnDefinition Width="10*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="37*"/>
@@ -217,12 +217,13 @@
         <DataGrid x:Name="SubstationItems"
                   ItemsSource="{Binding SubstationItems, UpdateSourceTrigger=PropertyChanged}"
                   IsReadOnly="True"
+                  VerticalScrollBarVisibility="Auto"
                   SelectedItem="{Binding SubstationItem, UpdateSourceTrigger=PropertyChanged}"
-                  Height="563"
-                  Margin="10,10,10,0"
+                  Height="418"
+                  Margin="10,66,0,0"
                   VerticalAlignment="Top"
                   AutoGenerateColumns="False"
-                  CanUserAddRows="False" Grid.Column="1" Grid.RowSpan="3" Background="Transparent">
+                  CanUserAddRows="False" Grid.Column="1" Background="#FF5E5E5E" Grid.Row="1" BorderBrush="#FF3C3C3C" FontFamily="Consolas" FontSize="14">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Width="*"  Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="Description" Width="*" Binding="{Binding Description}"/>
@@ -232,24 +233,23 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <Canvas Margin="10,10,16,24" Background="#FF5E5E5E" Grid.Row="1" Grid.RowSpan="2">
+        <Canvas Margin="10,66,16,10" Background="#FF5E5E5E" Grid.Row="1">
 
             <Line
             X1="0" Y1="10"
             X2="190" Y2="10"
-            Stroke="#FFFF4D4D"
+            Stroke="{Binding LineStart}"
             StrokeThickness="2" Grid.Row="1" Canvas.Left="15" Canvas.Top="1"/>
             <Line
             X1="0" Y1="0"
             X2="0" Y2="20"
-            Stroke="#FFFF4D4D"
+            Stroke="{Binding LineFirst}"
             StrokeThickness="2" Grid.Row="1" Canvas.Left="110" Canvas.Top="11" />
 
-            <!--Stroke="{Binding Line_1_color}"-->
             <Line
             X1="0" Y1="0"
             X2="0" Y2="20"
-            Stroke="#FFFF4D4D"
+            Stroke="{Binding LineSecond}"
             StrokeThickness="2" Grid.Row="1" Canvas.Left="110" Canvas.Top="81" />
             <Ellipse
                 Fill="Black"
@@ -257,18 +257,16 @@
                 Width="6"
                 StrokeThickness="2"
                 Stroke="Black" Canvas.Left="107" Canvas.Top="99"/>
-            <!--Stroke="{Binding Line_2_color}"-->
             <Line
             X1="0" Y1="0"
             X2="0" Y2="20"
             Name="line_2"
-            Stroke="#FFFF4D4D"
+            Stroke="{Binding LineThird}"
             StrokeThickness="2" Grid.Row="1" Canvas.Left="110" Canvas.Top="163" />
-            <!--Stroke="{Binding Line_3_color}"-->
             <Line
             X1="0" Y1="0"
             X2="0" Y2="25"
-            Stroke="#FFFF4D4D"
+                Stroke="{Binding LineFourth}"
             Name="line_3"
             StrokeThickness="2" Grid.Row="1" Canvas.Left="110" Canvas.Top="313" />
             <Ellipse
@@ -295,7 +293,6 @@
                 Width="6"
                 StrokeThickness="2"
                 Stroke="Black" Canvas.Left="107" Canvas.Top="338"/>
-            <TextBox Name="statistics" Height="82" Canvas.Left="590" TextWrapping="Wrap" Text="{Binding Statistics}" Width="135" Background="#33FFFFFF"/>
             <Ellipse
                 Fill="Black"
                 Height="6"
@@ -303,28 +300,28 @@
                 StrokeThickness="2"
                 Stroke="Black" Canvas.Left="107" Canvas.Top="76"/>
             <Line
+                Stroke="{Binding LineUpDis1}"
                 Name="Up_Disconector"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="35" Height="10" />
             <Line
                 x:Name="Down_Disconector_Copy"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineDownDis1}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="66" Height="10" />
             <Line
                 x:Name="Up_Breaker"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineUpBreaker}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="106" Height="10" />
             <Line
                 x:Name="Down_Breaker"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineDownBreaker}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="147" Height="10" />
             <Ellipse
                 Fill="Black"
@@ -336,13 +333,13 @@
                 x:Name="Up_Disconector_2"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineUpDis2}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="187" Height="10" />
             <Line
                 x:Name="Down_Disconector_2"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineDownDis2}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="219" Height="10" />
             <Ellipse
                 Fill="Black"
@@ -354,59 +351,59 @@
                 x:Name="Up_PT"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineUpPT}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="234" Height="10" />
             <Line
                 x:Name="Down_PT"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFEE2020"
+                Stroke="{Binding LineDownPT}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="297" Height="10" />
             <Line
                 x:Name="Up_AM"
                 X1="0" Y1="0"
                 X2="0" Y2="10"
-                Stroke="#FFFF4D4D"
+                Stroke="{Binding LineUpPump}"
                 StrokeThickness="2" Canvas.Left="110" Canvas.Top="344" Height="10" />
-            <Button Name="Disc_1" Content="" Canvas.Left="97" Margin="0" Canvas.Top="43" Width="25" Height="25" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen">
+            <Button Name="Disc_1" Content="" Canvas.Left="97" Margin="0" Canvas.Top="43" Width="25" Height="25" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen" Command="{Binding CommandDis1}" CommandParameter="1">
                 <Button.Background>
-                    <ImageBrush ImageSource="Assets/resloser-off.png"/>
+                    <ImageBrush ImageSource="{Binding Disconector1Image}"/>
                 </Button.Background>
             </Button>
-            <Button Name="Disc_2" Content="" Canvas.Left="97" Margin="0" Canvas.Top="194" Width="25" Height="25" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen">
+            <Button Name="Disc_2" Content="" Canvas.Left="97" Margin="0" Canvas.Top="194" Width="25" Height="25" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen" Command="{Binding CommandDis2}" CommandParameter="2">
                 <Button.Background>
-                    <ImageBrush ImageSource="Assets/recloser-on.png"/>
+                    <ImageBrush ImageSource="{Binding disconector2Image}"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="Breaker" Content="" Canvas.Left="93" Margin="0" Canvas.Top="113" Width="35" Height="35" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen">
+            <Button x:Name="Breaker" Content="" Canvas.Left="93" Margin="0" Canvas.Top="113" Width="35" Height="35" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen" Command="{Binding CommandBreaker}">
                 <Button.Background>
-                    <ImageBrush ImageSource="Assets/breaker-on.png"/>
+                    <ImageBrush ImageSource="{Binding BreakerImage}"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="PT" Content="" Canvas.Left="66" Margin="0" Canvas.Top="244" Width="86" Height="70" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen" FontFamily="Segoe UI Semibold">
+            <Button x:Name="PT" Canvas.Left="74" Margin="0" Canvas.Top="239" Width="71" Height="61" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen" FontFamily="Segoe UI Semibold" Command="{Binding CommandPT}" Foreground="#00000000">
                 <Button.Background>
-                    <ImageBrush ImageSource="Assets/transformator-on.png"/>
+                    <ImageBrush ImageSource="{Binding PTImage}"/>
                 </Button.Background>
             </Button>
-            <Button x:Name="AM_1" Content="" Canvas.Left="92" Margin="0" Canvas.Top="348" Width="67" Height="87" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}" Cursor="Pen">
+            <Button x:Name="AM_1" Content="" Canvas.Left="92" Margin="0" Canvas.Top="354" Width="67" Height="87" BorderBrush="{x:Null}" Style="{StaticResource MyButtonStyle}">
                 <Button.Background>
-                    <ImageBrush ImageSource="Assets/pump-on.png"/>
+                    <ImageBrush ImageSource="{Binding PumpImage}"/>
                 </Button.Background>
             </Button>
             <Canvas Visibility="{Binding Two_AM_Visible}" Height="111" Canvas.Left="1" Canvas.Top="349" Width="247" Background="#FF5E5E5E">
-                <Button x:Name="AM_2" Content="" Canvas.Left="153" Margin="0" Width="67" Height="87" BorderBrush="{x:Null}" Canvas.Top="21" Style="{StaticResource MyButtonStyle}" Cursor="Pen">
+                <Button x:Name="AM_2_Multi" Content="" Canvas.Left="153" Margin="0" Width="67" Height="87" BorderBrush="{x:Null}" Canvas.Top="21" Style="{StaticResource MyButtonStyle}">
                     <Button.Background>
-                        <ImageBrush ImageSource="Assets/pump-off.png"/>
+                        <ImageBrush ImageSource="{Binding Pump2Image}"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="AM_1_Copy" Content="" Canvas.Left="34" Margin="0" Width="67" Height="87" BorderBrush="{x:Null}" Canvas.Top="22" Style="{StaticResource MyButtonStyle}" Cursor="Pen">
+                <Button x:Name="AM_1_Multi" Content="" Canvas.Left="34" Margin="0" Width="67" Height="87" BorderBrush="{x:Null}" Canvas.Top="22" Style="{StaticResource MyButtonStyle}">
                     <Button.Background>
-                        <ImageBrush ImageSource="Assets/pump-on.png"/>
+                        <ImageBrush ImageSource="{Binding Pump1Image}"/>
                     </Button.Background>
                 </Button>
-                <Rectangle Height="20" Canvas.Left="51" Stroke="#FFFF4D4D" StrokeThickness="2" Canvas.Top="4" Width="2"/>
-                <Rectangle Height="20" Canvas.Left="169" Stroke="#FFFF4D4D" StrokeThickness="2" Canvas.Top="4" Width="2"/>
-                <Rectangle Height="2" Canvas.Left="51" Stroke="#FFFF4D4D" StrokeThickness="2" Width="120" Canvas.Top="-1"/>
+                <Rectangle Height="20" Canvas.Left="51" Stroke="{Binding LineUpFirstPump}" StrokeThickness="2" Canvas.Top="4" Width="2"/>
+                <Rectangle Height="20" Canvas.Left="169" Stroke="{Binding LineUpSecondPump}" StrokeThickness="2" Canvas.Top="4" Width="2"/>
+                <Rectangle Height="2" Canvas.Left="51" Stroke="{Binding LineUpMultiPump}" StrokeThickness="2" Width="120" Canvas.Top="-1"/>
                 <Ellipse
                 Fill="Black"
                 Height="6"
@@ -445,10 +442,19 @@
             </StatusBarItem>
         </StatusBar>
 
-        <Button  Content="Alarm states"  Grid.Column="2" HorizontalAlignment="Left" Height="24" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
+        <Button  Content="Alarm Table"  Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource MyButtonStyle}" Cursor="Hand" Height="41" Margin="10,39,0,0" VerticalAlignment="Top" Width="116" Grid.RowSpan="2" FontFamily="Consolas" FontSize="16" Background="#FFFF6D6D" Foreground="White" BorderBrush="#FFC5C5C5"/>
 
-        <ComboBox ItemsSource="{Binding ComboSubstations}"  SelectedItem="{Binding SelectedSubstation}" HorizontalAlignment="Left" Margin="120,5,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Select Substation" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top"/>
+        <ComboBox ItemsSource="{Binding ComboSubstations}"  SelectedItem="{Binding SelectedSubstation}" HorizontalAlignment="Left" Margin="224,48,0,0" VerticalAlignment="Top" Width="192" Height="22" Grid.RowSpan="2" FontFamily="Consolas" Foreground="White" Background="#FF5D5D5D" BorderBrush="#FF4D4D4D"/>
+        <Label Content="Select Substation" HorizontalAlignment="Left" Margin="226,11,0,0" HorizontalContentAlignment="Center" VerticalAlignment="Top" Height="38" Width="184" RenderTransformOrigin="0.5,0.5" Foreground="#FFF5D856" FontFamily="Consolas" FontSize="18">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-0.266"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
 
     </Grid>
 </Window>
